force-app/main/default/objects/smagicinteract__Keyword_Action_Map__c/smagicinteract__Keyword_Action_Map__c.object-meta.xml
<CustomObject>
    <label>Keyword Action Map</label>
    <nameField>
        <displayFormat>KAM-{00000000}</displayFormat>
        <label>Keyword Action Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keyword Action Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>