force-app/main/default/objects/smagicinteract__Keyword_Action_Map__c/fields/smagicinteract__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Action_Type__c</fullName>
    <description>This field contains the type of Action. The type can be: Trigger or Response.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger Action</fullName>
            </value>
            <value>
                <fullName>Response Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>