force-app/main/default/objects/smagicinteract__Keyword_Action_Map__c/fields/smagicinteract__Converse_App_Action__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_App_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the lookup of related action.</description>
    <label>Converse App Action</label>
    <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
    <relationshipName>KeywordActionMaps</relationshipName>
    <type>Lookup</type>
</CustomField>