force-app/main/default/objects/smagicinteract__Keyword_Action_Map__c/fields/smagicinteract__Keyword__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Keyword__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the lookup of related keyword.</description>
    <label>Keyword</label>
    <referenceTo>smagicinteract__Keyword__c</referenceTo>
    <relationshipName>KeywordActionMaps</relationshipName>
    <type>Lookup</type>
</CustomField>